<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="card"
            type="com.example.myapplication5.Card" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".EditCardFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/questionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_question"
                android:text="@{card.question}" />

            <EditText
                android:id="@+id/hintEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_hint"
                android:text="@{card.hint}" />

            <EditText
                android:id="@+id/answerEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_answer"
                android:text="@{card.answer}" />

            <EditText
                android:id="@+id/translationEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_translation"
                android:text="@{card.translation}" />

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_description"
                android:text="@{card.description}" />

            <ImageView
                android:id="@+id/selectedImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/selected_image" />

            <Button
                android:id="@+id/selectImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_image" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/save" />
        </LinearLayout>
    </ScrollView>
</layout>
